build context is relative to repo root post migration?

--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     image: techno-sim-dev:latest
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: ./.docker/Dockerfile
     init: true
     volumes:
     - type: bind
