--- a/dev_env/Dockerfile
+++ b/dev_env/Dockerfile
@@ -1,4 +1,5 @@
-FROM docker/dev-environments-default:stable-1
+# syntax=docker/dockerfile:1.4
+FROM docker/dev-environments-default:stable-1 AS build_env
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
