--- a/dev_env/Dockerfile
+++ b/dev_env/Dockerfile
@@ -1,5 +1,5 @@
 # syntax=docker/dockerfile:1.4
-FROM docker/dev-environments-default:stable-1 AS build_env
+FROM docker/dev-environments-default:stable-1 AS techno_build 
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
